Revert "Fix Orbit Image on Mobile"
This reverts commit 0e47ec20ac520289001aa617ea9448c284634639.

--- a/css/app.css
+++ b/css/app.css
@@ -220,10 +220,14 @@ img.logo {
 div.sd-box.main {
 /* 	border-left: 1px solid #fcfcfc; */
 	border-right: 1px solid #fcfcfc;
-/* 	border-bottom: 1px solid rgba(0,0,0,0.4);	 */
+	border-bottom: 1px solid black;	
+
 }
 
+.last {
+	border-bottom: 1px solid black;	
 
+}
 
 div.sd-box {
     padding-top: 1rem;
@@ -737,12 +741,12 @@ and (max-device-width : 1366px) {
 
 
 @media screen and (max-width: 39.9375em) {
-	
   .orbit-caption p {
     font-size: 12px;
     font-weight: 400; }
     
     div.sd-box.main {
+
 	border-right: none;
 	}
 	
@@ -750,7 +754,9 @@ and (max-device-width : 1366px) {
 		padding-left: 1.3rem;
 	}
 	
-
+	.orbit-image {
+		margin: 3rem 0; 
+	}
 	
 	img.logo {margin-top: 0.5rem;}
 	
